--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -9,7 +9,38 @@ html
     link(rel="stylesheet", href="/stylesheets/style.css")
     
   body
-    block content
-    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")/script
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")/script
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")/script
+    a.navbar-brand(href="/")
+      .brand-text.float-left Atomic Films
+      //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
+      img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
+    //- Start of Navbar
+    nav.navbar.navbar-expand-md.bg-info.navbar-light
+      .container  
+        button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavbar")
+          span.navbar-toggler-icon
+        .collapse.navbar-collapse#mainNavbar
+          ul.navbar-nav.justify-content-center
+            li.nav-item
+              a.nav-link.text-dark(href="/movies") Movies & Info
+            li.nav-item
+              a.nav-link.text-dark(href="/movies/reserve") Reserve
+            li.nav-item
+              a.nav-link.text-dark(href="/about") Contact
+    //- End of Navbar
+     
+  
+  
+  
+  
+    .container
+      block content
+
+      script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+      script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
+      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
+
+      footer.fixed-bottom.bg-info.text-center
+        .container
+          .af-footer-text &copy;2017 Atomic Films
+    
+    
