--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -6,12 +6,47 @@ block content
   | Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis iudicium purus sit amet fermentum.
   br
   br
-  .p-3.mb-2.bg-dark.text-white Current Movies
-    .container
-      .row
-        .col-sm
-          | Movie #1
-        .col-sm
-          | Movie #2
-        .col-sm
-          | Movie #3
+  .container
+    .row
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Movie #1 Title
+            .panel-body
+              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
+            .panel-footer Movie #1 show-times
+      .col-sm-4
+        .panel.panel-danger
+          .panel-heading Movie #2 Title
+            .panel-body
+              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
+            .panel-footer Movie #2 show-times
+      .col-sm-4
+        .panel.panel-success
+          .panel-heading Movie #3 Title
+            .panel-body
+              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
+            .panel-footer Movie #3 show-times
+  br
+  .container
+    .row
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Movie #4 Title
+            .panel-body
+              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
+            .panel-footer Movie #4 show-times
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Movie #5
+            .panel-body
+              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
+            .panel-footer Movie #5 show-times
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Movie #6 Title
+            .panel-body
+              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
+            .panel-footer Movie #6 show-times
+  br
+  br
+  
