Update design features.

--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -22,7 +22,7 @@ html
         button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavbar")
           span.navbar-toggler-icon
         .collapse.navbar-collapse#mainNavbar
-          ul.nav.ml-auto
+          ul.nav.ml-auto.mr-auto
             li.nav-item
               a.nav-link(href="/movies") Movies & Details
             li.nav-item
