--- a/app/app_server/views/index.pug
+++ b/app/app_server/views/index.pug
@@ -5,9 +5,9 @@ block content
   br
   .container
     h2.text-left Currently Playing
-  #movieCarousel.carousel.slide.bg-inverse.w-50.ml-auto.mr-auto(data-ride='carousel')
+  #movieCarousel.carousel.slide.bg-inverse.w-50.ml-auto.mr-auto(data-ride="carousel")
     ol.carousel-indicators
-      li.active(data-target='#movieCarousel', data-slide-to='0')
+      li.active(data-target="#movieCarousel", data-slide-to="0")
       li(data-target='#movieCarousel', data-slide-to='1')
       li(data-target='#movieCarousel', data-slide-to='2')
     .carousel-inner(role='listbox')
