--- a/app/app_server/views/index.pug
+++ b/app/app_server/views/index.pug
@@ -8,7 +8,7 @@ block content
   #movieCarousel.carousel.slide.bg-inverse.w-50.ml-auto.mr-auto(data-ride="carousel")
     ol.carousel-indicators
       li.active(data-target="#movieCarousel", data-slide-to="0")
-      li(data-target='#movieCarousel', data-slide-to='1')
+      li(data-target="#movieCarousel", data-slide-to="1")
       li(data-target='#movieCarousel', data-slide-to='2')
     .carousel-inner(role='listbox')
       .carousel-item.active
