Update design features.

--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -28,7 +28,7 @@ html
             li.nav-item
               a.nav-link(href="/movies/reserve") Reserve
             li.nav-item
-              a.nav-link(href="/about") Contact
+              a.nav-link(href="/about") Contact Us
     //- End Navbar
      
     .container
