--- a/app/app_server/views/index.pug
+++ b/app/app_server/views/index.pug
@@ -9,8 +9,8 @@ block content
     ol.carousel-indicators
       li.active(data-target="#movieCarousel", data-slide-to="0")
       li(data-target="#movieCarousel", data-slide-to="1")
-      li(data-target='#movieCarousel', data-slide-to='2')
-    .carousel-inner(role='listbox')
+      li(data-target="#movieCarousel", data-slide-to="2")
+    .carousel-inner(role="listbox")
       .carousel-item.active
         img.d-block.w-100(src='#' alt='first slide')
       .carousel-item
