Update design features.

--- a/app/app_server/views/index.pug
+++ b/app/app_server/views/index.pug
@@ -12,11 +12,11 @@ block content
       li(data-target="#movieCarousel", data-slide-to="2")
     .carousel-inner(role="listbox")
       .carousel-item.active
-        img.d-block.w-100(src='#' alt='first slide')
+        img.d-block.w-100(src="#" alt="first slide")
       .carousel-item
-        img.d-block.w-100(src='#' alt='second slide')
+        img.d-block.w-100(src="#" alt="second slide")
       .carousel-item
-        img.d-block.w-100(src='#' alt='third slide')
+        img.d-block.w-100(src="#" alt="third slide")
     a.carousel-control-prev(href='#movieCarousel', role='button', data-slide='prev')
       span.carousel-control-prev-icon(aria-hidden='true')
       span.sr-only
