--- a/app/app_server/views/index.pug
+++ b/app/app_server/views/index.pug
@@ -4,8 +4,10 @@ block content
   br
   br
   .container
+    //- Background image
+    img.responsive(src="atomic-films/app/public/images/fullTheatre.jpg" alt="Full Theatre")
     h2.text-left
-      | Currently Playing
+      | Feature Films
   #movieCarousel.carousel.slide.bg-inverse.w-50.ml-auto.mr-auto(data-ride="carousel")
     ol.carousel-indicators
       li.active(data-target="#movieCarousel", data-slide-to="0")
@@ -13,11 +15,11 @@ block content
       li(data-target="#movieCarousel", data-slide-to="2")
     .carousel-inner(role="listbox")
       .carousel-item.active
-        img.d-block.w-100(src="#" alt="first slide")
+        img.d-block.w-100(src="atomic-films/app/public/images/moviePoster1.jpg" alt="Movie Poster #1")
       .carousel-item
-        img.d-block.w-100(src="#" alt="second slide")
+        img.d-block.w-100(src="atomic-films/app/public/images/moviePoster2.jpg" alt="Movie Poster #2")
       .carousel-item
-        img.d-block.w-100(src="#" alt="third slide")
+        img.d-block.w-100(src="atomic-films/app/public/images/moviePoster3.jpg" alt="Movie Poster #3")
     a.carousel-control-prev(href='#movieCarousel', role='button', data-slide='prev')
       span.carousel-control-prev-icon(aria-hidden='true')
       span.sr-only
