--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -1,52 +1,56 @@
 extends layout
 
 block content
+  br
+  br
   h2= title
   p
   | Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis iudicium purus sit amet fermentum.
   br
   br
-  .container
-    .row
-      .col-sm-4
-        .panel.panel-primary
-          .panel-heading Movie #1 Title
-            .panel-body
-              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
-            .panel-footer Movie #1 show-times
-      .col-sm-4
-        .panel.panel-danger
-          .panel-heading Movie #2 Title
-            .panel-body
-              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
-            .panel-footer Movie #2 show-times
-      .col-sm-4
-        .panel.panel-success
-          .panel-heading Movie #3 Title
-            .panel-body
-              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
-            .panel-footer Movie #3 show-times
   br
   .container
     .row
       .col-sm-4
         .panel.panel-primary
-          .panel-heading Movie #4 Title
+          .panel-heading The Blob
             .panel-body
-              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
-            .panel-footer Movie #4 show-times
+              img.img-responsive(src="atomic-films/app/public/images/moviePoster4.jpg", style="width:100%", alt="Movie Poster #4")
+            .panel-footer Daily Show Times: 11:00am, 2:00pm, 5:00pm
+      .col-sm-4
+        .panel.panel-danger
+          .panel-heading Rebel Without a Cause
+            .panel-body
+              img.img-responsive(src="atomic-films/app/public/images/moviePoster5.jpg", style='width:100%', alt="Movie Poster #5")
+            .panel-footer Daily Show Times: 12:00pm, 2:00pm, 4:30pm
+      .col-sm-4
+        .panel.panel-success
+          .panel-heading Funny Face
+            .panel-body
+              img.img-responsive(src="atomic-films/app/public/images/moviePoster6.jpg", style='width:100%', alt="Movie Poster #6")
+            .panel-footer Daily Show Times: 1:00pm, 4:00pm, 7:00pm
+  br
+  br
+  .container
+    .row
       .col-sm-4
         .panel.panel-primary
-          .panel-heading Movie #5
+          .panel-heading Chinatown
             .panel-body
-              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
-            .panel-footer Movie #5 show-times
+              img.img-responsive(src="atomic-films/app/public/images/moviePoster7.jpg", style='width:100%', alt="Movie Poster #7")
+            .panel-footer Daily Show Times: 6:00pm, 9:00pm 11:30pm
       .col-sm-4
         .panel.panel-primary
-          .panel-heading Movie #6 Title
+          .panel-heading The Man Who Cheated Death
             .panel-body
-              img.img-responsive(src='https://placehold.it/150x80?text=IMAGE', style='width:100%', alt='Image')
-            .panel-footer Movie #6 show-times
+              img.img-responsive(src="atomic-films/app/public/images/moviePoster8.jpg", style='width:100%', alt="Movie Poster #8")
+            .panel-footer Daily Show Times 11:00am, 2:00pm, 6:00pm
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Big Jake
+            .panel-body
+              img.img-responsive(src="atomic-films/app/public/images/moviePoster9.jpg", style='width:100%', alt="Movie Poster #9")
+            .panel-footer Daily Show Times: 12:00pm, 3:30pm, 7:00pm
   br
   br
   
