Update layout and movie posters.

--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -13,21 +13,44 @@ block content
     .row
       .col-sm-4
         .panel.panel-primary
-          .panel-heading The Blob
+          .panel-heading Viva Las Vegas
             .panel-body
-              img.img-responsive(src="atomic-films/app/public/images/moviePoster4.jpg", style="width:100%", alt="Movie Poster #4")
+              img.img-responsive(src="./images/moviePoster1.jpg", style="width:100%", alt="Movie Poster #4")
             .panel-footer Daily Show Times: 11:00am, 2:00pm, 5:00pm
+      br
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Paradise Canyon
+            .panel-body
+              img.img-responsive(src="./images/moviePoster2.jpg", style="width:100%", alt="Movie Poster #4")
+            .panel-footer Daily Show Times: 11:00am, 2:00pm, 5:00pm
+      br
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading Guys And Dolls
+            .panel-body
+              img.img-responsive(src="./images/moviePoster3.jpg", style="width:100%", alt="Movie Poster #4")
+            .panel-footer Daily Show Times: 11:00am, 2:00pm, 5:00pm
+      br
+      .col-sm-4
+        .panel.panel-primary
+          .panel-heading The Thing
+            .panel-body
+              img.img-responsive(src="./images/moviePoster4.jpg", style="width:100%", alt="Movie Poster #4")
+            .panel-footer Daily Show Times: 11:00am, 2:00pm, 5:00pm
+      br
       .col-sm-4
         .panel.panel-danger
-          .panel-heading Rebel Without a Cause
+          .panel-heading Pirates Of Penzance
             .panel-body
-              img.img-responsive(src="atomic-films/app/public/images/moviePoster5.jpg", style='width:100%', alt="Movie Poster #5")
+              img.img-responsive(src="./images/moviePoster5.jpg", style='width:100%', alt="Movie Poster #5")
             .panel-footer Daily Show Times: 12:00pm, 2:00pm, 4:30pm
+      br
       .col-sm-4
         .panel.panel-success
-          .panel-heading Funny Face
+          .panel-heading Dragstrip Riot
             .panel-body
-              img.img-responsive(src="atomic-films/app/public/images/moviePoster6.jpg", style='width:100%', alt="Movie Poster #6")
+              img.img-responsive(src="./images/moviePoster6.jpg", style='width:100%', alt="Movie Poster #6")
             .panel-footer Daily Show Times: 1:00pm, 4:00pm, 7:00pm
   br
   br
@@ -35,21 +58,23 @@ block content
     .row
       .col-sm-4
         .panel.panel-primary
-          .panel-heading Chinatown
+          .panel-heading La Dolce Vita
             .panel-body
-              img.img-responsive(src="atomic-films/app/public/images/moviePoster7.jpg", style='width:100%', alt="Movie Poster #7")
+              img.img-responsive(src="./images/moviePoster7.jpg", style='width:100%', alt="Movie Poster #7")
             .panel-footer Daily Show Times: 6:00pm, 9:00pm 11:30pm
+      br
       .col-sm-4
         .panel.panel-primary
-          .panel-heading The Man Who Cheated Death
+          .panel-heading Vertigo
             .panel-body
-              img.img-responsive(src="atomic-films/app/public/images/moviePoster8.jpg", style='width:100%', alt="Movie Poster #8")
+              img.img-responsive(src="./images/moviePoster8.jpg", style='width:100%', alt="Movie Poster #8")
             .panel-footer Daily Show Times 11:00am, 2:00pm, 6:00pm
+      br
       .col-sm-4
         .panel.panel-primary
-          .panel-heading Big Jake
+          .panel-heading Ocean's Eleven
             .panel-body
-              img.img-responsive(src="atomic-films/app/public/images/moviePoster9.jpg", style='width:100%', alt="Movie Poster #9")
+              img.img-responsive(src="./images/moviePoster9.jpg", style='width:100%', alt="Movie Poster #9")
             .panel-footer Daily Show Times: 12:00pm, 3:30pm, 7:00pm
   br
   br
