--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -9,22 +9,24 @@ html
     link(rel="stylesheet", href="/stylesheets/style.css")
     
   body
-    //- Atomic Films brand
-    a.atomicFilms-brand(href="/")
-      .atomicFilms-brand-text.float-left Atomic Films
-      //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
-      img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
-    // end Atomic-Films brand
-    
-    //- navbar
-    nav.navbar.navbar-expand-md.navbar-light.bg-darkcyan
+    //- Atomic Films Brand Section
+    .container-fluid#afBrandMotto
+      a.atomicFilms-brand(href="/")
+        .atomicFilms-brand-text.float-left Atomic Films
+          //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
+          img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
+      .row.py-3
+        p.lead.pl-4.pt-2.af-header-font Let it be a classic entertainment night!
+    br
+    //- Navbar Nav Items
+    nav.navbar.navbar-expand-md.navbar-dark.bg-
       .container  
         button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavbar")
           span.navbar-toggler-icon
         .collapse.navbar-collapse#mainNavbar
-          ul.nav.ml-auto.mr-auto
+          ul.nav.ml-auto
             li.nav-item
-              a.nav-link(href="/movies") Movies & Details
+              a.nav-link(href="/movies") Details
             li.nav-item
               a.nav-link(href="/movies/reserve") Reserve
             li.nav-item
@@ -38,6 +40,7 @@ html
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
       script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
       
-      footer
-        .row
-          p Copy&
+      //- Footer Section
+      footer.fixed-bottom.text-center
+        .container
+          a.af-footer-text(href="/") &copy;2017 Atomic Films
