Fix nav and movie details page.

--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -9,6 +9,54 @@ block content
   br
   br
   br
+  section.jumbotron.text-center
+    .container
+      h1.jumbotron-heading Movie Synopsis
+      p.lead.text-muted
+        | Find important information about Atomic Films' feature films below. Read up on the synopsis for each movie to see what they're about and which stars grace the stage. 
+     
+  .album.text-muted
+    .container
+      .row
+        .card
+          img(src="./images/moviePoster1.jpg", style="width:25%" alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster2.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster3.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster4.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster5.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster6.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster7.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster8.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        .card
+          img(src="./images/moviePoster9.jpg", style="width:25%", alt='Card image cap')
+          p.card-text
+            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+
+
+//-
   .container
     .row
       .col-sm-4
