--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -14,12 +14,11 @@ html
       a.atomicFilms-brand(href="/")
         .atomicFilms-brand-text.float-left Atomic Films
           //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
-          img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
+          //img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
       .row.py-3
-        p.lead.pl-4.pt-2.af-header-font Let it be a classic entertainment night!
-    br
+        p.lead.pl-4.af-header-font ...Let the classics entertain you!
     //- Navbar Nav Items
-    nav.navbar.navbar-expand-md.navbar-dark.bg-
+    nav.navbar.navbar-expand-md.navbar-dark
       .container  
         button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavbar")
           span.navbar-toggler-icon
@@ -33,14 +32,17 @@ html
               a.nav-link(href="/about") Contact Us
     //- End Navbar
      
-    .container
+    .container-fluid
       block content
 
       script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
       script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
       
+      br
+      br
       //- Footer Section
-      footer.fixed-bottom.text-center
-        .container
-          a.af-footer-text(href="/") &copy;2017 Atomic Films
+      footer
+        .row
+          a(href="/")
+            p &copy;2017 Atomic Films
